<?xml version="1.0"?>
<package format="2">
  <name>pci_mav</name>
  <version>0.0.0</version>
  <description>Interface with planner for MAVs</description>
  <maintainer email="tung.dang@nevada.unr.edu">Tung Dang</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>trajectory_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>planner_msgs</depend>
  <depend>planner_control_interface</depend>

</package>
